Fix for bug 134824. Column Sorting in the Download Manager has no effect. r=neil, sr=jag, a=asa